--- a/SportStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,23 +1,16 @@
-﻿@using SportsStore.Domain.Entities;
-@model IEnumerable<Product>
+﻿@using SportsStore.WebUI.Models;
+@model ProductsListViewModel
 
 @{
     ViewBag.Title = "Products";
 }
-<h2>
-    Products
-</h2>
 
-@foreach (var p in Model)
+
+@foreach (var p in Model.Products)
 {
-    <div>
-        <h3>
-            @p.Name
-        </h3>
-        @p.Description
-        <h4>
-            @p.Price.ToString("c")
-        </h4>
-    </div>
+    @Html.Partial("ProductSummary",p)
 }
+<div class="btn-group pull-right">
+    @Html.PageLinks(Model.PagingInfo,x=>Url.Action("List",new { page=x}))
+</div>
 
