--- a/SportStore/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportStore/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -3,8 +3,11 @@
 @{ 
     ViewBag.Title = "Sports Store: Your Cart";
 }
+<style>
+    #cartTable td{vertical-align:middle}
+</style>
 <h2>Your cart</h2>
-<table class="table">
+<table class="table" id="cartTable">
     <thead>
         <tr>
             <th>Quantity</th>
@@ -21,6 +24,14 @@
             <td class="text-left">@line.Product.Name</td>
             <td class="text-right">@line.Product.Price.ToString("c")</td>
             <td class="text-right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
+            <td>
+                @using (Html.BeginForm("RemoveFromCart", "Cart"))
+                {
+                    @Html.Hidden("ProductId",line.Product.ProductId)
+                    @Html.HiddenFor(t=>t.ReturnUrl)
+                    <input type="submit" value="Remove" class="btn btn-sm btn-warning" />
+                }
+            </td>
 
         </tr>
             
@@ -35,4 +46,5 @@
 </table>
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+    @Html.ActionLink("Checkout Now","Checkout",null,new { @class="btn btn-primary"})
 </div>
