添加订单提交页面

--- a/SportStore/SportsStore.WebUI/Views/Cart/Checkout.cshtml
+++ b/SportStore/SportsStore.WebUI/Views/Cart/Checkout.cshtml
@@ -1,2 +1,45 @@
 ﻿@model SportsStore.Domain.Entities.ShippingDetails
 
+@{
+    ViewBag.Title = "SportsStore: Checkout";
+}
+
+<h2>
+    Check out now
+</h2>
+<p>
+    Please enter your details, and we'll ship your goods right away!
+</p>
+
+@using (Html.BeginForm())
+{
+    <h3>Ship to</h3>
+    <div class="form-group">
+        <label>Name:</label>
+        @Html.TextBoxFor(t => t.Name, new { @class = "form-control" })
+    </div>
+    <h3>Address</h3>
+    foreach (var property in ViewData.ModelMetadata.Properties)
+    {
+        if(property.PropertyName!="Name"&&property.PropertyName!="GifWrap")
+        {
+            <div class="form-group">
+                <label>@(property.DisplayName??property.PropertyName)</label>
+                @Html.TextBox(property.PropertyName,null,new  {@class="form-control" })
+            </div>
+
+        }
+    }
+
+    <h3>Options</h3>
+    <div class="checkbox">
+        <label>
+            @Html.EditorFor(t=>t.GiftWrap)
+            Gift Wrap these items
+        </label>
+
+    </div>
+    <div class="text-center">
+        <input class="btn btn-primary" type="submit" value="Complete Order"/>
+    </div>
+}
