--- a/SportStore/SportsStore.WebUI/Views/Admin/Edit.cshtml
+++ b/SportStore/SportsStore.WebUI/Views/Admin/Edit.cshtml
@@ -3,22 +3,47 @@
     ViewBag.Title = "Admin: Edit " + Model.Name;
     Layout ="~/Views/Shared/_AdminLayout.cshtml";
 }
+<style>
+    div .img {
+        position: relative;
+    }
 
+    div .img .btn input {
+        position:absolute;
+        z-index:2;
+        top:0;
+        left:0;
+        filter:alpha(opacity=0);
+        opacity:0;
+        background-color:transparent;
+        color:transparent;
+
+    }
+
+    
+
+
+</style>
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3>Edit @Model.Name</h3>
-
+       
     </div>
-    @using (Html.BeginForm("Edit","Admin"))
+    @using (Html.BeginForm("Edit","Admin",FormMethod.Post,new { enctype= "multipart/form-data" }))
     {
     <div class="panel-body">
         @Html.HiddenFor(t => t.ProductId)
         @foreach (var property in ViewData.ModelMetadata.Properties)
         {
-            if (property.PropertyName != "ProductId")
+            switch (property.PropertyName)
             {
+                case "ProductId":
+                case "ImageData":
+                case "ImageMimeType":
+                break;
+                default:
                 <div class="form-group">
-                    <label>@(property.DisplayName ?? property.DisplayName)</label>
+                    <label>@(property.DisplayName ?? property.PropertyName)</label>
                     @if (property.PropertyName == "Description")
                     {
                         @Html.TextArea(property.PropertyName, null, new { @class = "form-control", rows = 5 })
@@ -29,8 +54,33 @@
                     }
                     @Html.ValidationMessage(property.PropertyName)
                 </div>
+                break;
+
             }
+
         }
+
+    <div class="form-group">
+        <div class="img">
+            <label>Image</label>
+            <a class="btn" href="Javascript:;">
+                Choose File...
+                <input type="file" name="image" size="40" onchange='$("#upload-file-info").html($(this).val())' />
+            </a>
+            <span class="label label-info" id="upload-file-info"></span>
+        </div>
+        @if (Model.ImageData == null)
+        {
+            <div class="form-control-static">
+                No Image
+            </div>
+        }
+        else
+        {
+            <img class="img-thumbnail" width="150" height="150" src="@Url.Action("GetImage","Product",new { Model.ProductId})" />
+        }
+
+    </div>
     </div>
     <div class="panel-footer">
        <input type="submit" value="Save" class="btn btn-primary" />
