--- a/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
+++ b/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
@@ -26,5 +26,8 @@
     <div>
         This is a URL: @Url.Action("Index","Home",new { id="MyId"})
     </div>
+    <div>
+        @Html.ActionLink("Click me", "GetLegacyURL", new { legacyURL = "~/articles/Windows_3.1_Overview.html" })
+    </div>
 </body>
 </html>
