--- a/WebService/WebService/Views/Shared/_Layout.cshtml
+++ b/WebService/WebService/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
 
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/knockout-3.4.2.js"></script>
     @RenderSection("Scripts")
 </head>
 <body>
